--- a/Code/Bill.Web/Views/Login/Login.cshtml
+++ b/Code/Bill.Web/Views/Login/Login.cshtml
@@ -8,13 +8,13 @@
     <div class="layui-form-item">
         <label class="layui-form-label">账户名</label>
         <div class="layui-input-block">
-            <input type="text" id="Name" required lay-verify="required" placeholder="请输入账户名" autocomplete="off" class="layui-input">
+            <input type="text" id="Name" required lay-verify="required" placeholder="请输入账户名" autocomplete="new-password" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">密码</label>
         <div class="layui-input-block">
-            <input type="password" id="Pwd" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+            <input type="password" id="Pwd" required lay-verify="required" placeholder="请输入密码" autocomplete="new-password" class="layui-input">
         </div>
     </div>
   
