--- a/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
+++ b/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
@@ -6,8 +6,8 @@
         <a href="javascript:;">账单</a>
         <dl class="layui-nav-child">
             <!-- 二级菜单 -->
-            <dd><a href="javascript:;" name="/BillsType/Index">账单类型</a></dd>
-            <dd><a href="javascript:;" name="/Bills/Index">账单管理</a></dd>
+            <dd><a href="/BillsType/Index">账单类型</a></dd>
+            <dd><a href="/Bills/Index">账单管理</a></dd>
         </dl>
     </li>
     <li class="layui-nav-item hreader_user">
