--- a/Code/Bill.Web/Views/Shared/_Layout_Layer_Open.cshtml
+++ b/Code/Bill.Web/Views/Shared/_Layout_Layer_Open.cshtml
@@ -20,7 +20,7 @@
     <script src="~/Content/Scripts/Bill/Common/LayerHelper.js"></script>
 </head>
 <body>
-    <div id="content">
+    <div>
         @RenderBody()
     </div>
 </body>
