--- a/Code/Bill.Web/Content/Css/main.css
+++ b/Code/Bill.Web/Content/Css/main.css
@@ -108,3 +108,31 @@
     bottom: 0px;
     left: 0px;
 }
+.div_All {
+    background-color: #f2f2f2;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.div_All h2 {
+    display: contents;
+    margin-bottom: 0;
+    height: 60px;
+    line-height: 60px;
+    font-size: 18px;
+    font-weight: 200;
+    background-color: #f5f5f5;
+}
+
+.div_head {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 990px;
+}
