--- a/Code/Bill.Web/Views/Bills/Index.cshtml
+++ b/Code/Bill.Web/Views/Bills/Index.cshtml
@@ -37,84 +37,15 @@
             {
                 <a name="@item.Id">@item.Name</a>
             }
+            <input type="hidden" id="BillsTypeId" value="">
         </div>
 
 
     </div>
     <div class="div_head div_content">
         <div class="div_head div_head_content">
-            <table class="layui-table">
-                <colgroup>
-                    <col width="150">
-                    <col width="200">
-                    <col>
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>昵称</th>
-                        <th>加入时间</th>
-                        <th>签名</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>贤心</td>
-                        <td>2016-11-29</td>
-                        <td>人生就像是一场修行</td>
-                    </tr>
-                    <tr>
-                        <td>许闲心</td>
-                        <td>2016-11-28</td>
-                        <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div id="demo7"></div>
+            <table class="layui-table" id="Table"></table>
+            <div id="Page"></div>
         </div>
     </div>
 </div>
-<script>
-    layui.use(['laydate', 'laypage', 'layer'], function () {
-        var laydate = layui.laydate,
-            laypage = layui.laypage,
-            layer = layui.layer,
-            table = layui.table;
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#StartDateTime' //指定元素
-        });
-        laydate.render({
-            elem: '#EndDateTime' //指定元素
-        });
-        //表格加载
-        table.render({
-            elem: '#demo'
-            , height: 312
-            , url: '/Bills/FindList/user/' //数据接口
-            , page: true //开启分页
-            , cols: [[ //表头
-                { field: 'id', title: 'ID', width: 80, sort: true, fixed: 'left' }
-                , { field: 'username', title: '用户名', width: 80 }
-                , { field: 'sex', title: '性别', width: 80, sort: true }
-                , { field: 'city', title: '城市', width: 80 }
-                , { field: 'sign', title: '签名', width: 177 }
-                , { field: 'experience', title: '积分', width: 80, sort: true }
-                , { field: 'score', title: '评分', width: 80, sort: true }
-                , { field: 'classify', title: '职业', width: 80 }
-                , { field: 'wealth', title: '财富', width: 135, sort: true }
-            ]]
-        });
-
-        //分页加载
-        laypage.render({
-            elem: 'demo7'
-            , count: 100
-            , layout: ['count', 'prev', 'page', 'next', 'limit', 'refresh', 'skip']
-            , jump: function (obj) {
-                console.log(obj)
-            }
-        });
-
-
-    });
-</script>
