--- a/Code/Bill.Web/Views/Shared/_Layout.cshtml
+++ b/Code/Bill.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <script src="~/Content/Scripts/Cookie/jquery-latest.js"></script>
     <script src="~/Content/Scripts/Bill/Common/CookieHelper.js"></script>
     <script src="~/Content/Scripts/Bill/Common/LayerHelper.js"></script>
+    <script src="~/Content/Scripts/EChart/echarts.min.js"></script>
 </head>
 <body>
     @Html.Partial("_Layout_Header")
