--- a/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
+++ b/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
@@ -1,6 +1,8 @@
 ﻿<ul class="layui-nav layui-bg-green" id="menu">
     <li class="layui-nav-item ">
-        <img src="~/Images/login.png" style="width:55px" />
+        <a href="/Home/Index">
+            <img src="~/Images/login.png" style="width:55px" />
+        </a>
     </li>
     <li class="layui-nav-item">
         <a href="javascript:;">账单</a>
