--- a/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
+++ b/Code/Bill.Web/Views/Shared/_Layout_Header.cshtml
@@ -16,7 +16,7 @@
         <a href="javascript:;"><img src="http://t.cn/RCzsdCq" class="layui-nav-img" id="logo">张翔</a>
         <dl class="layui-nav-child">
             <dd><a href="javascript:;">账户管理</a></dd>
-            <dd><a href="javascript:;">退出</a></dd>
+            <dd><a href="javascript:;" id="Exit">退出</a></dd>
         </dl>
     </li>
 </ul>
