--- a/Code/Bill.Web/Views/Home/Index.cshtml
+++ b/Code/Bill.Web/Views/Home/Index.cshtml
@@ -3,76 +3,13 @@
     Page.Title = "首页";
 }
 <link href="~/Content/Css/homeIndex.css" rel="stylesheet" />
+<script src="~/Content/Scripts/Bill/HomeIndex.js"></script>
 <div class="div_All">
-    <div class="chart_circle">
-        <div id="container" style="height: 100%"></div>
+    <div class="chart_circle_left">
+        <div id="container_left" style="height: 100%"></div>
+    </div>
+    <div class="chart_circle_rigth">
+        <div id="container_rigth" style="height: 100%"></div>
     </div>
 </div>
 
-<script type="text/javascript">
-    var dom = document.getElementById("container");
-    var myChart = echarts.init(dom);
-    var app = {};
-    var data = genData();
-
-
-
-
-    function genData(count) {
-        $.post("/Bills/GetNowMonth", function (res) {
-
-            var legendData = [];
-            var seriesData = [];
-            var selected = {};
-            for (var i in res) {
-                legendData.push(res[i].BillsTypeName);
-                selected[res[i].BillsTypeName] = true;
-                seriesData.push({
-                    name: res[i].BillsTypeName,
-                    value: res[i].Money
-                });
-            }
-            option = {
-                title: {
-                    text: '同名数量统计',
-                    subtext: '纯属虚构',
-                    x: 'center'
-                },
-                tooltip: {
-                    trigger: 'item',
-                    formatter: "{a} <br/>{b} : {c} ({d}%)"
-                },
-                legend: {
-                    type: 'scroll',
-                    orient: 'vertical',
-                    right: 10,
-                    top: 20,
-                    bottom: 20,
-                    data: legendData,
-
-                    selected: selected
-                },
-                series: [
-                    {
-                        name: '姓名',
-                        type: 'pie',
-                        radius: '55%',
-                        center: ['40%', '50%'],
-                        data: seriesData,
-                        itemStyle: {
-                            emphasis: {
-                                shadowBlur: 10,
-                                shadowOffsetX: 0,
-                                shadowColor: 'rgba(0, 0, 0, 0.5)'
-                            }
-                        }
-                    }
-                ]
-            };
-            if (option && typeof option === "object") {
-                myChart.setOption(option, true);
-            }
-        })
-    }
-    
-</script>
